--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-    "name": "planets-site",
-    "version": "1.0.0",
-    "description": "A simple multi-page that shows information of different planets of the solar system ",
-    "main": "app.js",
-    "repository": "https://github.com/DanielJ1337/planets-facts-site.git",
-    "author": "Daniel Juergens",
-    "license": "",
-    "private": false,
-    "dependencies": {
-        "dotenv": "^10.0.0",
-        "ejs": "^3.1.6",
-        "express": "^4.17.1",
-        "node": "^16.4.0",
-        "nodemon": "^2.0.9"
-    }
+  "name": "planets-site",
+  "version": "1.0.0",
+  "description": "A simple multi-page that shows information of different planets of the solar system ",
+  "main": "app.js",
+  "repository": "https://github.com/DanielJ1337/planets-facts-site.git",
+  "author": "Daniel Juergens",
+  "license": "MIT",
+  "private": false,
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.14"
+  },
+  "scripts": {
+    "start": "nodemon app.js"
+  }
 }
